<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="30.0dip"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="5dp">

    <TextView
        android:id="@+id/time"
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/time"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/freq"
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/freq"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/pci"
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/pci1"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/tac"
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/tac1"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/rssi"
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/rssi1"
        android:textColor="@color/colorPrimary" />
    <TextView
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:id="@+id/priority"
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:text="@string/priority" />
</LinearLayout>