<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bandwidth"
            android:textSize="18sp"
            android:layout_gravity="center_vertical"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:id="@+id/bandwidth"
            >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5m"
                android:id="@+id/m5"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10m"
                android:id="@+id/m10"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_20m"
                android:id="@+id/m20"
                />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="6dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_delay_field"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"/>
        <EditText
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/et_bg"
            android:textSize="16sp"
            android:maxLines="1"
            android:maxLength="4"
            android:hint="@string/unit"
            android:padding="4dp"
            android:id="@+id/time_delay"
            android:inputType="number"/>

    </LinearLayout>
    <TextView
        android:layout_marginTop="6dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/synchronous_mode"
        android:textSize="18sp"
        android:layout_gravity="center_vertical"/>
        <com.lte.ui.widget.FlowRadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:id="@+id/synchronous_mode"
            >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cnm"
                android:id="@+id/cnm"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gps"
                android:id="@+id/gps"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mix"
                android:id="@+id/mix"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auxiliary_frequency_correction"
                android:id="@+id/nmm"
                />
        </com.lte.ui.widget.FlowRadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="6dp">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frequency_offset"
                android:textSize="18sp"
                android:layout_gravity="center_vertical"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                android:id="@+id/frequency_offset"
                >
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:id="@+id/yes"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:id="@+id/no"/>
            </RadioGroup>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="6dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/operating_band"
        android:layout_gravity="center_vertical"
        android:textSize="18sp"/>
    <EditText
        android:layout_gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/et_bg"
        android:textSize="16sp"
        android:maxLines="1"
        android:maxLength="4"
        android:hint="@string/_90"
        android:padding="4dp"
        android:id="@+id/operating_band"
        android:inputType="number"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/grade"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:layout_marginEnd="10dp"
            android:padding="4dp"
            android:id="@+id/upgrade"/>
        <TextView
            android:layout_marginStart="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/cancel"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="4dp"
            android:id="@+id/cancel"/>
    </LinearLayout>
</LinearLayout>