<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30.0dip"
        android:background="@color/colorPrimary"
        android:padding="5dp"
        >
        <TextView
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/number"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:text="@string/time"
            />
        <TextView
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/freq"
            android:layout_width="70dip"
            android:layout_height="match_parent"
            android:text="@string/freq" />
        <TextView
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/pci"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:text="@string/pci1" />
        <TextView
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/tac"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:text="@string/tac1" />
        <TextView
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/rssi"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:text="@string/rssi1" />
        <TextView
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/priority"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:text="@string/priority" />
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/scan_result"/>
        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>