<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/title_bar"/>
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="30.0dip"
                android:background="@color/colorPrimary"
                android:padding="5dp"
                >
                <TextView
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:id="@+id/attribuation"
                    android:layout_width="72dp"
                    android:layout_height="match_parent"
                    android:text="@string/xuhao" />
                <!--<LinearLayout-->
                <!--android:layout_width="140dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:orientation="vertical">-->
                <TextView
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:id="@+id/imsi1"
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:text="@string/imsi_imei" />
                <!--<TextView-->
                <!--android:textColor="@color/white"-->
                <!--android:gravity="center"-->
                <!--android:id="@+id/imei1"-->
                <!--android:layout_width="140dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:text="@string/imei" />-->
                <!--</LinearLayout>-->
                <TextView
                    android:id="@+id/mobile"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:text="@string/mobile"/>

                <TextView
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:id="@+id/number"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:text="@string/operator"
                    />

                <TextView
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:id="@+id/timestamp"
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:text="@string/time" />
                <TextView
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:id="@+id/count"
                    android:layout_width="36dp"
                    android:layout_height="match_parent"
                    android:text="@string/bbu" />
                <TextView
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:id="@+id/attribution"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:text="@string/attribuation"
                    android:visibility="gone"
                    />
                <TextView
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:id="@+id/phoneUsername"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:text="@string/phone_user_name"
                    />
                <TextView
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:id="@+id/position"
                    android:layout_width="210dp"
                    android:layout_height="match_parent"
                    android:text="@string/position"
                    />
            </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imsi_list"
                android:descendantFocusability="blocksDescendants"/>
        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>