<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp">
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="18sp"
       android:text="@string/dbm"
      />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:background="@drawable/et_bg"
        android:hint="127"
        android:padding="4dp"
        android:id="@+id/dbm"
        android:inputType="number"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dbm_0_43_127"
        android:layout_marginStart="20dp"
        />
    </LinearLayout>
    <RelativeLayout
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="40dp"
        android:paddingEnd="40dp">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_bt_bg"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:text="@string/save"
        android:id="@+id/save"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_bt_bg"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:text="@string/cancel"
        android:id="@+id/cancel"
        />
    </RelativeLayout>
</LinearLayout>